@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.11830 2013/01/12 06:59:42 obache Exp $
+$NetBSD: TODO,v 1.11831 2013/01/12 07:26:15 obache Exp $
 
 Suggested new packages
 ======================
@@ -1213,6 +1213,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o ucblogo-5.5
 	o udunits-2.1.17 [pkg/43529, breaks ncview-1.x, also need to update it to 2.x]
 	o ufoai-2.3.1
+	o uim-1.8.4
 	o unicap-0.9.8
 	o unicode-screensaver-0.4
 	o unrealircd-3.2.10
