@@ -1,4 +1,4 @@
-# $NetBSD: options.mk,v 1.9 2009/09/22 16:52:02 tron Exp $
+# $NetBSD: options.mk,v 1.10 2013/01/12 15:58:53 tron Exp $
 
 PKG_OPTIONS_VAR=		PKG_OPTIONS.milter-greylist
 PKG_OPTIONS_REQUIRED_GROUPS=	mta
@@ -34,11 +34,6 @@ DRACD_DB?=		/etc/mail/dracd.db
 
 CONFIGURE_ARGS+=	--enable-drac --with-drac-db=${DRACD_DB}
 
-USE_DB185=	yes
-.  if ${OPSYS} == "SunOS"
-BDB_ACCEPTED=	db2 db3 db4 db5
-BDB185_DEFAULT=	${BDB_DEFAULT}
-.  endif
 .  include "../../mk/bdb.buildlink3.mk"
 .  if ${BDB_TYPE} != "db1"
 CPPFLAGS+=	-DUSE_DB185_EMULATION
