@@ -1,0 +1,15 @@
+# $NetBSD$
+#
+
+DISTNAME=	bwping-1.7
+CATEGORIES=	net
+MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=bwping/}
+
+MAINTAINER=	ryoon@NetBSD.org
+HOMEPAGE=	http://bwping.sourceforge.net/
+COMMENT=	Tool to measure bandwidth and RTT between two hosts using ICMP
+LICENSE=	2-clause-bsd
+
+GNU_CONFIGURE=	yes
+
+.include "../../mk/bsd.pkg.mk"
