@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.49 2013/01/05 07:46:04 obache Exp $
+$NetBSD: distinfo,v 1.50 2013/01/10 11:20:46 obache Exp $
 
-SHA1 (mikutter.0.2.1.1117.tar.gz) = 58fa41f6a21948e17db1dff326759996ce3f3aa0
-RMD160 (mikutter.0.2.1.1117.tar.gz) = 9446abcf1fe96687d6a094e63e9be50713b1ad38
-Size (mikutter.0.2.1.1117.tar.gz) = 2293635 bytes
+SHA1 (mikutter.0.2.1.1119.tar.gz) = 9e4fb4e76b75974472e4b99b4be0f20a09aedb50
+RMD160 (mikutter.0.2.1.1119.tar.gz) = 6240e38e7a77f1e72292e313beb1eec32e31647a
+Size (mikutter.0.2.1.1119.tar.gz) = 2293729 bytes
