@@ -1,0 +1,3 @@
+Source Code Beautifier for C, C++, C#, ObjectiveC, D, Java, Pawn
+and VALA.  The goals of this project are simple: Create a highly
+configurable, easily modifiable source code beautifier.
