@@ -1,0 +1,16 @@
+# $NetBSD$
+#
+
+DISTNAME=	uncrustify-0.59
+CATEGORIES=	textproc
+MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=uncrustify/}
+
+MAINTAINER=	ryoon@NetBSD.org
+HOMEPAGE=	http://uncrustify.sourceforge.net/
+COMMENT=	Source Code Beautifier for C-like languages
+LICENSE=	gnu-gpl-v2
+
+GNU_CONFIGURE=	yes
+USE_LANGUAGES=	c c++
+
+.include "../../mk/bsd.pkg.mk"
