@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2013,v 1.160 2013/01/12 14:03:59 taca Exp $
+$NetBSD: CHANGES-2013,v 1.164 2013/01/13 04:31:17 ryoon Exp $
 
 Changes to the packages collection and infrastructure in 2013:
 
@@ -223,3 +223,7 @@ Changes to the packages collection and infrastructure in 2013:
 	Updated www/py-django-mezzanine-grappelli to 0.2.11nb1 [ryoon 2013-01-12]
 	Updated devel/ruby-stomp to 1.2.8 [taca 2013-01-12]
 	Updated emulators/xtrs to 4.9d [is 2013-01-12]
+	Updated graphics/fotoxx to 13.01.2 [ryoon 2013-01-13]
+	Added textproc/uncrustify version 0.59 [ryoon 2013-01-13]
+	Added net/bwping version 1.7 [ryoon 2013-01-13]
+	Updated net/mikutter to 0.2.1.1119 [obache 2013-01-13]
